fixed SyringeFluidTypeManager to accept datapacks, fixed SyringeBladeItem to accept the new improved manager, adjusted SyringeFluidType to accommodate these new changes