@@ -1,74 +1,80 @@
 package net.electrisoma.bloodisfuel.registry.items.syringe_blade;
 
+import net.electrisoma.bloodisfuel.api.registry.BRegistries;
+
 import com.simibubi.create.Create;
-import net.electrisoma.bloodisfuel.registry.BFluids;
 
 import net.minecraft.nbt.CompoundTag;
+import net.minecraft.core.Registry;
+import net.minecraft.core.RegistryAccess;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.material.Fluid;
-import net.minecraft.world.effect.MobEffects;
-import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.item.alchemy.PotionUtils;
+import net.minecraft.world.effect.MobEffectInstance;
 
 import net.minecraftforge.fluids.FluidStack;
-import net.minecraftforge.registries.ForgeRegistries;
 
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 
 @SuppressWarnings("unused")
-public enum SyringeFluidTypeManager {
+public class SyringeFluidTypeManager {
 
-    VISCERA(BFluids.VISCERA.get(), 0xDF4416, new MobEffectInstance(MobEffects.WEAKNESS, 60, 1)),
-    BLOOD(BFluids.BLOOD.get(), 0xAA0000, new MobEffectInstance(MobEffects.WEAKNESS, 60, 1)),
-    ENRICHED_BLOOD(BFluids.ENRICHED_BLOOD.get(), 0xE11313, new MobEffectInstance(MobEffects.WEAKNESS, 60, 1)),
+    // hardcoded values
+    public static final SyringeFluidType POTION = new SyringeFluidType.Builder()
+            .addFluids(net.minecraftforge.registries.ForgeRegistries.FLUIDS.getValue(
+                    new net.minecraft.resources.ResourceLocation(Create.ID, "potion")))
+            .color(0x9966FF)
+            .build();
 
-    POTION(ForgeRegistries.FLUIDS.getValue(new ResourceLocation(Create.ID, "potion")), 0x9966FF, null),
-    EMPTY(null, 0xBD3228, null);
+    public static final SyringeFluidType EMPTY = new SyringeFluidType.Builder()
+            .color(0xBD3228)
+            .build();
 
-    private final Fluid fluid;
-    private int color;
-    private final MobEffectInstance defaultEffect;
-
-    SyringeFluidTypeManager(Fluid fluid, int color, MobEffectInstance defaultEffect) {
-        this.fluid = fluid;
-        this.color = color;
-        this.defaultEffect = defaultEffect;
-    }
+    private static final List<SyringeFluidType> HARDCODED = List.of(
+            POTION
+    );
 
     // fluid
-    public static SyringeFluidTypeManager fromFluid(FluidStack fluidStack) {
-        if (fluidStack.isEmpty()) return EMPTY;
-        Fluid fluid = fluidStack.getFluid();
+    public static SyringeFluidType fromFluid(FluidStack stack, RegistryAccess access) {
+        if (stack.isEmpty()) return EMPTY;
+        Fluid fluid = stack.getFluid();
 
-        for (SyringeFluidTypeManager type : values())
-            if (type.fluid != null && type.fluid.equals(fluid)) return type;
+        Registry<SyringeFluidType> registry = access.registryOrThrow(BRegistries.SYRINGE_BLADE_FLUID_TYPE);
+        Optional<SyringeFluidType> dynamic = registry.stream()
+                .filter(type -> type.fluids().stream().anyMatch(holder -> holder.value() == fluid))
+                .findFirst();
 
-        return EMPTY;
+        return dynamic.orElseGet(() -> HARDCODED.stream()
+                .filter(type -> type.fluids().stream().anyMatch(holder -> holder.value() == fluid))
+                .findFirst()
+                .orElse(EMPTY));
     }
 
     // bar color
-    public int getColor(FluidStack stack) {
-        if (this == POTION) {
+    public static int getColor(SyringeFluidType type, FluidStack stack) {
+        if (type.isPotionType()) {
             CompoundTag tag = stack.getOrCreateTag();
-            this.color = PotionUtils.getColor(PotionUtils.getAllEffects(tag)) | 0xff000000;
-            return color;
-        } return color;
+            return PotionUtils.getColor(PotionUtils.getAllEffects(tag)) | 0xff000000;
+        } return type.color();
     }
 
     // fluid effects
-    public List<MobEffectInstance> getEffects(FluidStack fluidStack) {
-        if (this == POTION && fluidStack.hasTag()) {
-            CompoundTag tag = fluidStack.getTag();
-            return PotionUtils.getAllEffects(tag);
-        } return defaultEffect == null
-                ? Collections.emptyList()
-                : Collections.singletonList(new MobEffectInstance(defaultEffect));
+    public static List<MobEffectInstance> getEffects(SyringeFluidType type, FluidStack fluidStack) {
+        if (type.isPotionType() && fluidStack.hasTag()) return PotionUtils.getAllEffects(fluidStack.getTag());
+
+        return type.onEntityHitEffect()
+                .map(effect -> List.of(new MobEffectInstance(effect)))
+                .orElse(List.of());
     }
 
     // potion type check
-    public boolean isPotionType() {
-        return this == POTION;
+    public static boolean isPotionType(SyringeFluidType type) {
+        return type.fluids().stream().anyMatch(holder ->
+                holder.unwrapKey().map(ResourceKey::location)
+                        .map(ResourceLocation::getPath)
+                        .orElse("")
+                        .equals("potion"));
     }
 }
